[package]
name = "jose-rs"
version = "0.3.0"
authors = ["Antonio Estévez <aestgar62@gmail.com>"]
edition = "2021"

[dependencies]
aead = { version = "0.5"}
aes = { version = "0.8", optional = true }
aes-gcm = { version = "0.10", optional = true }
aes-kw = { version = "0.2", optional = true }
base64 = "0.21"
cbc = { version = "0.1", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
concat-kdf = { version = "0.1", optional = true }
ed25519-dalek = { version = "2.0", optional = true }
elliptic-curve = { version = "0.13", optional = true }
getrandom = "0.2"
k256 = { version = "0.13", optional = true }
hmac = { version = "0.12", optional = true }
libflate = { version = "2.0", optional = true }
num-bigint = { version = "0.8.2", features = ["i128", "u64_digit", "prime", "zeroize"], default-features = false, package = "num-bigint-dig", optional = true }
num-traits = { version= "0.2.9", default-features = false, features = ["libm"], optional = true }
p256 = { version = "0.13", optional = true }
p384 = { version = "0.13", optional = true }
p521 = { version = "0.13", optional = true }
pbkdf2 = { version = "0.12", optional = true }
ptypes = { git = "https://github.com/aestgar62/ptypes.git", version = "0.1.7" }
rand = { version = "0.8.1", features = ["getrandom"], optional = true }
rand_core = { version = "0.6", optional = true }
rsa = { version = "0.9", optional = true, features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
zeroize = { version = "1.6", features = ["zeroize_derive"] }

[dev-dependencies]
   

[features]
default = [
    "jwk-rsa", 
    "jwk-okp", 
    "jwk-ecdsa-all", 
    "jwk-hmac", 
    "jws", 
    "jwe", 
    "jwe-aes-hmac", 
    "jwe-aes-cbc", 
    "jwe-aes-kw",
    "jwe-aes-gcm",
    "jwe-rsa-kw",
    "jwe-ecdh-kw",
    "jwe-pbkdf2-kw",
    "jwe-chachapoly",
    ]
jwk-all = ["jwk-rsa"]
jwk-ecdsa-all = ["jwk-k256", "jwk-p256", "jwk-p384", "jwk-p521"]
jwk = []
jws = ["jwk"]
jwe = ["jwk", "libflate"]
jwk-rsa = ["rsa", "jwk", "num-traits", "num-bigint", "rsa/sha2", "rand", "sha1"] 
jwk-eddsa = ["ed25519-dalek", "ed25519-dalek/rand_core", "jwk", "rand_core", "rand"]
jwk-k256 = ["k256", "jwk-ec", "k256/ecdh","rand_core", "rand"]
jwk-p256 = ["p256", "jwk-ec", "p256/ecdh"]
jwk-p384 = ["p384", "jwk-ec", "p384/ecdh"]
jwk-p521 = ["p521", "jwk-ec"]
jwk-ec = ["jwk", "elliptic-curve", "elliptic-curve/arithmetic", "elliptic-curve/sec1"]
jwk-okp = ["jwk-eddsa"]
jwk-oct = ["jwk"]
jwk-hmac = ["jwk-oct", "hmac", "sha2"]
jwe-aes-hmac = ["jwe","jwk-oct", "aes", "cbc", "hmac", "sha2"]    
jwe-aes-cbc = ["jwe-aes", "cbc", "cbc/alloc"]
jwe-aes = ["jwe", "jwk-oct", "aes"]
jwe-aes-kw = ["jwe-aes", "aes-kw", "aes-kw/alloc"]
jwe-aes-gcm = ["jwe-aes", "aes-gcm", "aes-gcm/alloc"]
jwe-rsa-kw = ["jwe", "jwk-rsa", "sha1"]
jwe-ecdh-kw = ["jwe", "jwk-ec", "concat-kdf", "concat-kdf/std", "sha2"]
jwe-pbkdf2-kw = ["jwe", "pbkdf2", "sha2", "pbkdf2/hmac"]
jwe-chachapoly = ["jwe", "jwk-oct", "chacha20poly1305", "chacha20poly1305/alloc", "rand_core", "rand"]